--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   uuid: ^3.0.6
   font_awesome_flutter: ^10.1.0
   intl: ^0.17.0
+  path: ^1.8.1
 
 dev_dependencies:
   flutter_test:
